syntax = "proto3";

package com.jackpf.locationhistory;

option java_multiple_files = true;

message Device {
  string id = 1;
  string name = 2;
}

enum DeviceStatus {
  DEVICE_UNKNOWN = 0;
  DEVICE_PENDING = 1;
  DEVICE_REGISTERED = 2;
}

message StoredDevice {
  Device device = 1;
  DeviceStatus status = 2;
  PushHandler push_handler = 3;
}

message Location {
  double lat = 1;
  double lon = 2;
  double accuracy = 3;
}

message StoredLocation {
  Location location = 1;
  int64 timestamp = 2;
}

message PushHandler {
  string name = 1;
  string url = 2;
}
